# aiocr

./: .gitignore  README.md  mise.toml  pyproject.toml
src/aiocr/: __init__.py  __main__.py  agents.py  config.py  models.py  ocr.py  ui.py
tests/: test_basic.py
